# sheep

./: .dockerignore  .gitignore  Dockerfile  README  docker-compose.yml  main.py  pyproject.toml
data/: watchlist.json
requirements/: requirements.in  requirements.txt
scripts/: config_entrypoint.sh  initialize_project.sh
sheep/: sheep_buy_signal.py
sheep/config/: config.yaml  sheep_cache.json  test_sheep_cache.json
sheep/kafka/: kafka_config.py  kafka_producer.py
sheep/yarn/: clean_wool.py  collect_wool.py
sheep_shear/: sheep_shear.py
sheep_shear/config/: config.yaml  sheep_cache.json
sheep_shear/kafka/: kafka.properties  kafka_config.py  kafka_producer.py
sheep_shear/yarn/: clean_wool.py
src/: main.py
src/casper_engine/: casper_engine.py  clean_signal.py  collect_records.py  sec_edgar_client.py
src/casper_output/: casper_output.py
src/config/: config.yaml  kafka_producer.properties  watchlist.json
src/kafka/: input_output.py  kafka.properties  kafka_utils.py  schemas.py  utils.py
src/sheep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_collect_wool.py
wiki/: background.md
