[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sheep"
version = "0.0.1"
requires-python = ">= 3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sheep"]

[tool.pytest.ini_options]
addopts = ["--disable-plugin-autoload", "--import-mode=importlib"]
testpaths = ["tests/"]

